--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Web.config
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Web.config
@@ -87,7 +87,9 @@
       <endpoint address="http://localhost:52663/AccountService.svc" binding="wsHttpBinding"
           bindingConfiguration="BindingDefault" contract="IAccountService"
           name="AccountServiceEndPoint" />
-      
+      <endpoint address="http://localhost:52663/CommonDataService.svc" binding="wsHttpBinding"
+                bindingConfiguration="BindingDefault" contract="ICommonDataService"
+                name="CommonDataServiceEndPoint" />      
     </client>
   </system.serviceModel>
 </configuration>
