--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.ClientServices/Tna.SAllocatePlus.ClientServices.csproj
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.ClientServices/Tna.SAllocatePlus.ClientServices.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AccountServiceClient.cs" />
+    <Compile Include="CommonDataServiceClient.cs" />
     <Compile Include="JobServiceClient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
