--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.ClientServices/output.config
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.ClientServices/output.config
@@ -3,7 +3,7 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_IAccountService" closeTimeout="00:01:00"
+                <binding name="WSHttpBinding_ICommonDataService" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -23,9 +23,9 @@
             </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:52663/AccountService.svc"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAccountService"
-                contract="IAccountService" name="WSHttpBinding_IAccountService">
+            <endpoint address="http://localhost:52663/CommonDataService.svc"
+                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ICommonDataService"
+                contract="ICommonDataService" name="WSHttpBinding_ICommonDataService">
                 <identity>
                     <userPrincipalName value="Nnguyen@vic.lotons.com.au" />
                 </identity>
