--- a/dev/SAllocatePlus/Tna.SAllocatePlus/TnaSAllocatePlus.DataAccessLayer.EF/TnaSAllocatePlus.DataAccessLayer.EF.csproj
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/TnaSAllocatePlus.DataAccessLayer.EF/TnaSAllocatePlus.DataAccessLayer.EF.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dao\CommonDataDao.cs" />
     <Compile Include="Dao\JobDao.cs" />
     <Compile Include="Dao\StaffDao.cs" />
     <Compile Include="Migrations\201606081425209_Init.cs" />
