And mobile app, complete job email send for admin, view response from staff

--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Tna.SAllocatePlus.AdminWebUI.csproj
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Tna.SAllocatePlus.AdminWebUI.csproj
@@ -120,6 +120,7 @@
   <ItemGroup>
     <Compile Include="ApiControllers\CostCentreController.cs" />
     <Compile Include="ApiControllers\JobController.cs" />
+    <Compile Include="ApiControllers\MobileController.cs" />
     <Compile Include="ApiControllers\RoleController.cs" />
     <Compile Include="ApiControllers\StaffController.cs" />
     <Compile Include="ApiControllers\UserController.cs" />
@@ -136,6 +137,7 @@
     </Compile>
     <Compile Include="Models\JsonResponseMessage.cs" />
     <Compile Include="Models\LoginViewModel.cs" />
+    <Compile Include="Models\ResetPasswordRequestViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Security\UserPrincipal.cs" />
     <Compile Include="ServiceFactory.cs" />
@@ -304,6 +306,9 @@
     <Content Include="Views\Job\Index.cshtml" />
     <Content Include="Views\Account\Login.cshtml" />
     <Content Include="Views\Staff\Index.cshtml" />
+    <Content Include="Views\Account\Profile.cshtml" />
+    <Content Include="Views\Account\ResetPassword.cshtml" />
+    <Content Include="Views\Account\ResetPasswordSuccess.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
