--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.ClientServices/output.config
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.ClientServices/output.config
@@ -3,7 +3,7 @@
     <system.serviceModel>
         <bindings>
             <wsHttpBinding>
-                <binding name="WSHttpBinding_ICommonDataService" closeTimeout="00:01:00"
+                <binding name="WSHttpBinding_IJobService" closeTimeout="00:01:00"
                     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
                     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
                     maxBufferPoolSize="524288" maxReceivedMessageSize="65536"
@@ -23,11 +23,11 @@
             </wsHttpBinding>
         </bindings>
         <client>
-            <endpoint address="http://localhost:52663/CommonDataService.svc"
-                binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_ICommonDataService"
-                contract="ICommonDataService" name="WSHttpBinding_ICommonDataService">
+            <endpoint address="http://localhost:52663/JobService.svc" binding="wsHttpBinding"
+                bindingConfiguration="WSHttpBinding_IJobService" contract="IJobService"
+                name="WSHttpBinding_IJobService">
                 <identity>
-                    <userPrincipalName value="Nnguyen@vic.lotons.com.au" />
+                    <userPrincipalName value="Wery7-PC\Wery7" />
                 </identity>
             </endpoint>
         </client>
