--- a/.gitignore
+++ b/.gitignore
@@ -211,3 +211,4 @@ GeneratedArtifacts/
 _Pvt_Extensions/
 ModelManifest.xml
 /dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.AdminWebUI/Scripts/lib
+/dev/SAllocatePlus/SAllocatePlusApp/SAllocateApp/www/lib
