Move mobile api to public api project

--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.PublicApi/Web.config
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.PublicApi/Web.config
@@ -50,4 +50,24 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <wsHttpBinding>
+        <binding name="BindingDefault">
+          <reliableSession enabled="true"/>
+        </binding>
+      </wsHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://localhost:52663/JobService.svc" binding="wsHttpBinding"
+          bindingConfiguration="BindingDefault" contract="IJobService"
+          name="JobServiceEndPoint" />
+      <endpoint address="http://localhost:52663/AccountService.svc" binding="wsHttpBinding"
+          bindingConfiguration="BindingDefault" contract="IAccountService"
+          name="AccountServiceEndPoint" />
+      <endpoint address="http://localhost:52663/CommonDataService.svc" binding="wsHttpBinding"
+                bindingConfiguration="BindingDefault" contract="ICommonDataService"
+                name="CommonDataServiceEndPoint" />
+    </client>
+  </system.serviceModel>
 </configuration>
