--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.CommonShared/Tna.SAllocatePlus.CommonShared.csproj
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.CommonShared/Tna.SAllocatePlus.CommonShared.csproj
@@ -58,6 +58,7 @@
     <Compile Include="EntityNotFoundException.cs" />
     <Compile Include="AccessRightsEnum.cs" />
     <Compile Include="JobStageEnum.cs" />
+    <Compile Include="JsonResponseMessage.cs" />
     <Compile Include="ObjectExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools.cs" />
