--- a/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.BusinessLogicServer/Web.config
+++ b/dev/SAllocatePlus/Tna.SAllocatePlus/Tna.SAllocatePlus.BusinessLogicServer/Web.config
@@ -9,6 +9,11 @@
   </connectionStrings>
   <appSettings>
     <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="SmtpMailEnabled" value="true"/>
+    <add key="SmtpMailHost" value="mail.wnext.net.au"/>
+    <add key="SmtpMailPort" value="587"/>
+    <add key="SmtpMailAccount" value="contact@wnext.net.au"/>
+    <add key="SmtpMailPassword" value="^**********^"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.2" />
